@@ -1,0 +1,2 @@
+RCV_SHUTDOWN	1
+SEND_SHUTDOWN	2
